bk_ida/gccida/g3/report_diagnostic
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1831:26: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
void  report_diagnostic( diagnostic_context_0 *dc) 
                         ^~~~~~~~~~~~~~~~~~~~
                         diagnostic_context
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1834:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v3; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1848:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v17; // rdx 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1910:25: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
_mm_cvtsi32_si128( v26)).m128i_u64[0]; 
~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1914:5: error: assigning to '__m128' (vector of 4 'float' values) from incompatible type 'int'
v22 = _mm_loadh_ps( ( const double *)&v28); 
    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1929:7: error: use of undeclared identifier 'warning_message_3'
if ( !warning_message_3 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/diagnostic.c:1932:1: error: use of undeclared identifier 'warning_message_3'
warning_message_3 = 1; 
^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/report_diagnostic/src/obj/diagnostic.o] Error 1
